# flutter_camera_processing

./: .gitignore  README.md  init.sh  init_windows.ps1  pubspec.yaml  update_ios.sh
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/markosyan/flutter_camera_processing/: FlutterCameraProcessingPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/markosyan/flutter_camera_processing_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: .gitignore  flutter_camera_processing.modulemap  flutter_camera_processing.podspec
ios/Classes/: FlutterCameraProcessingPlugin.h  FlutterCameraProcessingPlugin.m  SwiftFlutterCameraProcessingPlugin.swift
ios/Classes/src/: CMakeLists.txt  common.cpp  native_opencv.cpp  native_opencv.h  native_zxing.cpp  native_zxing.h
lib/: flutter_camera_processing.dart  generated_bindings.dart  image_converter.dart  isolate_utils.dart  opencv_image_page.dart  opencv_page.dart  opencv_stream_page.dart  scanner_overlay.dart  zxing_page.dart
src/: CMakeLists.txt  native_opencv.cpp  native_opencv.h
test/: flutter_camera_processing_test.dart
